Added tests for configs all passing, can move onto creating factories for controllers.

--- a/BRADx/BRADx.csproj
+++ b/BRADx/BRADx.csproj
@@ -12,10 +12,11 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <Content Include="bin\Debug\net8.0\configs\ics.deck.xml" />
     </ItemGroup>
 
     <ItemGroup>
-      <None Include="bin\Debug\net8.0\configs\reader.config">
+      <None Include="bin\Debug\net8.0\configs\ics.reader.xml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
