--- a/BRADxTester/BRADxTester.csproj
+++ b/BRADxTester/BRADxTester.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Configurations\Configurations.csproj" />
       <ProjectReference Include="..\Protocols\Protocols.csproj" />
     </ItemGroup>
 
