Added robot config and added better message on failed tests for config loading.

--- a/BRADx/BRADx.csproj
+++ b/BRADx/BRADx.csproj
@@ -13,6 +13,7 @@
         <Link>.dockerignore</Link>
       </Content>
       <Content Include="bin\Debug\net8.0\configs\ics.deck.xml" />
+      <Content Include="bin\Debug\net8.0\configs\ics.robot.xml" />
     </ItemGroup>
 
     <ItemGroup>
