--- a/InstrumentControlService/appsettings.json
+++ b/InstrumentControlService/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConfigFiles": {
+    "Directory": "/app/configs",
+    "Prefix": "ics",
+    "Description": "All configuration files for the InstrumentControlService follow the format {prefix}.{controller}.xml, e.g. ics.reader.xml, ics.robot.xml, ics.deck.xml"
   }
 }
