Have everything working for configs now including the unit tests and starting the ICS

--- a/InstrumentControlService/appsettings.json
+++ b/InstrumentControlService/appsettings.json
@@ -8,6 +8,7 @@
   "ConfigFiles": {
     "Directory": "/app/configs",
     "Prefix": "ics",
-    "Description": "All configuration files for the InstrumentControlService follow the format {prefix}.{controller}.xml, e.g. ics.reader.xml, ics.robot.xml, ics.deck.xml"
+    "Postfix": "config.xml",
+    "Description": "All configuration files for the InstrumentControlService follow the format {prefix}.{controller}.config, e.g. ics.reader.config"
   }
 }
