Broken ICS but close to working, need to find best way to deal with controllers that have multiple instances of the same type of hardware, for example a gantry has three linear motors. So when dealing with dictionaries storying just by hardware name doesnt work as is

--- a/BRADxTester/BRADxTester.csproj
+++ b/BRADxTester/BRADxTester.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Configurations\Configurations.csproj" />
+      <ProjectReference Include="..\Extensions\Extensions.csproj" />
       <ProjectReference Include="..\Protocols\Protocols.csproj" />
     </ItemGroup>
 
