--- a/LedBoard/LedBoard.csproj
+++ b/LedBoard/LedBoard.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Communications\Communications.csproj" />
       <ProjectReference Include="..\Configurations\Configurations.csproj" />
+      <ProjectReference Include="..\Controllers\Controllers.csproj" />
       <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
