--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Commands\Commands.csproj" />
       <ProjectReference Include="..\Communications\Communications.csproj" />
       <ProjectReference Include="..\Configurations\Configurations.csproj" />
     </ItemGroup>
