--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Communications\Communications.csproj" />
+    </ItemGroup>
+
 </Project>
