--- a/BRADxTester/BRADxTester.csproj
+++ b/BRADxTester/BRADxTester.csproj
@@ -24,6 +24,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Configurations\Configurations.csproj" />
       <ProjectReference Include="..\Extensions\Extensions.csproj" />
+      <ProjectReference Include="..\Motor\Motor.csproj" />
       <ProjectReference Include="..\Protocols\Protocols.csproj" />
     </ItemGroup>
 
