Hardware now should conenct

--- a/Communications/Communications.csproj
+++ b/Communications/Communications.csproj
@@ -8,6 +8,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Logging\Logging.csproj" />
+      <ProjectReference Include="..\StateMachines\StateMachines.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.IO.Ports" Version="10.0.0-preview.7.25380.108" />
     </ItemGroup>
 
 </Project>
